# serde-xdr

./: Cargo.toml  README.md
src/: deserializer.rs  errors.rs  lib.rs  serializer.rs
