[package]
name = "serde-xdr"
version = "0.1.0"
authors = ["Sam Gomena <sgomena@tripwire.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "^2.0"
rustc-serialize = "0.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_bytes = "*"
byteorder = "*"